--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,12 @@
 {
   "name": "Sora Prompt Builder",
-  "short_name": "Sora Builder",
+  "short_name": "SoraPrompt",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#111111",
+  "theme_color": "#000000",
   "icons": [
-    {
-      "src": "sora_icon_192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "sora_icon_512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "sora_icon_192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "sora_icon_512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
