chore: remove comments from manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Sora Prompt Builder",
   "short_name": "Sora",
-  "start_url": "/sora-prompt-builder/",   // ★絶対パスでリポ名を入れる
-  "scope": "/sora-prompt-builder/",       // ★ここも揃える
+  "start_url": "/sora-prompt-builder/",
+  "scope": "/sora-prompt-builder/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#111111",
